# access-test-component

./: CMakeLists.txt  README.md
.github/build-ci/data/: standard.json
.github/build-ci/manifests/: gcc.spack.yaml.j2  intel.spack.yaml.j2
.github/workflows/: ci.yml
src/: CMakeLists.txt  stub.f90
stub/: CMakeLists.txt
stub/src/: CMakeLists.txt  hello_world.f90  stub.f90
